Iteration 3: recipe content

--- a/recipes/mango-float.html
+++ b/recipes/mango-float.html
@@ -5,7 +5,29 @@
     <title>MANGO FLOAT</title>
 </head>
 <body>
-    <h1>Mango Float Recipe</h1>
     <a href="../index.html">HOME</a>
+    <h1>Mango Float Recipe</h1> 
+        <img src="mango-float.jpg">
+        <p><h3>Description</h3></p>
+         <p>This mango cheesecake is a Caribbean twist on a classic dessert. I used a ready made graham cracker crust because it makes prep time shorter and is perfect for this flavor of cheesecake.</p>
+    <h2>Ingredients</h2>
+        <ul>
+            <li>2 (8 ounce) packages cream cheese, softened</li>
+            <li>¾ cup white sugar</li>
+            <li>2 large eggs</li>    
+            <li>2 teaspoons vanilla extract</li>
+            <li>1 graham cracker crust, unbaked</li>
+            <li>1 ¼ cups mango nectar, divided</li>
+            <li>⅓ cup white sugar</li>   
+            <li>2 tablespoons cornstarch</li>
+            <li>2 cups ripe mangoes, peeled, pitted, and diced</li>
+        </ul>
+    <h2>Steps</h2>
+        <ol>
+            <li>Preheat the oven to 350 degrees F (175 degrees C).</li>
+            <li>Mix 3/4 cup of sugar and cream cheese in a medium bowl. Mix in eggs one at a time, then stir in vanilla; pour mixture into graham cracker crust, and smooth over the top.</li>
+            <li> Bake in preheated oven until the edges have puffed up but the middle still jiggles, about 30 minutes. Allow to cool for 30 minutes, then refrigerate until cold, about 3 hours.</li>
+            <li>While the cheesecake is baking, pour 1 cup of mango nectar and 1/3 cup of sugar into a saucepan; bring to a boil over medium-high heat to dissolve the sugar. Dissolve cornstarch in the remaining 1/4 cup of mango nectar; stir into the boiling saucepan until thickened and clear, about 30 seconds. Place diced mango into a heatproof bowl, and toss with the thickened sauce. Allow to cool to room temperature, then pour over the cheesecake. Serve cold.</li>
+        </ol>
 </body>
 </html>
