Add 2 more recipes

--- a/recipes/mango-float.html
+++ b/recipes/mango-float.html
@@ -7,7 +7,7 @@
 <body>
     <a href="../index.html">HOME</a>
     <h1>Mango Float Recipe</h1> 
-        <img src="mango-float.jpg">
+        <img src="images/mango-float.jpg">
         <p><h3>Description</h3></p>
          <p>This mango cheesecake is a Caribbean twist on a classic dessert. I used a ready made graham cracker crust because it makes prep time shorter and is perfect for this flavor of cheesecake.</p>
     <h2>Ingredients</h2>
