--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/mango-float.html">Mango Float</a>
+    <ul>
+        <li><a href="recipes/mango-float.html">Mango Float</a></li>
+        <li><a href="recipes/Chicken-Thigh.html">Chicken Thigh and Orzo Skillet</a></li>
+        <li><a href="recipes/Cabbage.html">Cabbage, Potato, and Sausage Skillet</a></li>
+    </ul> 
 </body>
 </html>
