add css to homepage.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>NOT SURE YET</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/mango-float.html">Mango Float</a></li>
-        <li><a href="recipes/Chicken-Thigh.html">Chicken Thigh and Orzo Skillet</a></li>
-        <li><a href="recipes/Cabbage.html">Cabbage, Potato, and Sausage Skillet</a></li>
-    </ul> 
+   <ul>
+        <div class="recipes">
+            <li><a href="recipes/mango-float.html">Mango Float</a></li>
+            <li><a href="recipes/Chicken-Thigh.html">Chicken Thigh and Orzo Skillet</a></li>
+            <li><a href="recipes/Cabbage.html">Cabbage, Potato, and Sausage Skillet</a></li>
+        </div>
+    </ul>
 </body>
 </html>
